tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__PreciseAssembler-AAAAAAAAAAAAAAAAAAAMEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3090,
  "prerequisites": [
    1685,
    2329,
    2331,
    12880365575383562570,
    2830
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Precise Assembler has two modes: Precise mode and Normal mode.\n\nPrecise mode is used to make some of the advanced components from Good Generator mod.\n\n[note]As name suggests your current casings lack precision to produce these advanced components.\nYou will need at least MK-1 casings for this mode to work.[/note]\n\nNormal mode works as multiblock version of Assembler.\n\n[note]You can't skip tiers with this. You need singleblock Assembler or GT++ multi to make your first Energy Hatch, then you can use it for Precise Assembler.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Precise Assembler",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1685,
    2329,
    2331,
    12880365575383562570,
    2830
  ],
  "rewards": [],
  "tasks": []
}
