tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__QuantumUplink-jZURYQZlSuitTiiasN4J8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 460856900135553520,
  "prerequisites": [
    15599985800221413233,
    2008
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The §5§lQuantum Uplink§r is a multi made specifically for the Matter Manipulator that is unlocked with the aid of §4§lUV§r tech. \n\nThis allows the Matter Manipulator to connect to your ME system over an §2infinite range§r, and §3across dimensions§r. The tool can be linked by placing it into the controller while the uplink is active. The uplink will take a continous 1A of ZPM power to function.\n\nAdditionally, you can now use it to create fake ME patterns upon selecting an area. This will make it quick to order all of the parts needed for Copy & Pasting in an area. \n\n[warn]The Uplink is powerful, but at a cost. Moving all items / fluids from the AE system will cost a small amount of plasma per transfer. \n\nSpecifically: 16k EU of plasma per item / per 1000L of fluid[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quantum Uplink",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15599985800221413233,
    2008
  ],
  "rewards": [],
  "tasks": []
}
