tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__SafetyFirst-AAAAAAAAAAAAAAAAAAAIcQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2161,
  "prerequisites": [
    70
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For those new to GregTech, here are some tips and warnings about electricity.\n\nMachines don't like being out in the rain, and will start fires nearby. Fires next to a machine have a random chance of an explosion. Also, sending a higher voltage than a machine's tier causes an explosion. Or several, if you pack things together, like many people. Sending more amps than a machine can use doesn't harm anything though.\n\nSending too high a voltage or too many amps down a cable will cause the cable to burn up and start fires, which may then cause machine explosions. Make sure the number of amps provided by generators and buffers to a cable does not exceed the amps it is capable of carrying.\n\nA generator that supplies 1A can possibly feed multiple machines, if their recipes require less than the full voltage. For example, macerators processing ore only need 2 EU/t, so you could run several from a single 1A generator, as long as the wires aren't too long. Why does that matter? Because there's loss for every amp for every block, listed on the wire/cable. Note that cables are better than wires. But be careful! Sometimes a recipe needs a lot more EU than you expect, like a macerator sand -> quartz dust recipe.\n\nMost machines only use 1A, however there are exceptions, such as the arc furnace, thermal centrifuge, world accelerators, and the UUM machines. Note that machines can accept more amps than they use (usually 2) in order to top up their energy supply, especially if they didn't receive most of the amp because of loss (mostly a problem in LV). The formula is (EU/t of Recipe * 2) / Voltage Tier + 1. Keep this in mind when deciding on cables.\n\nSome machines are specifically there to help you deal with multiple amps, such as battery buffers, transformers, and diodes. Check out the quest tab Storing and Transforming EU for more on those.\n\nIf you want to send more amps, use a larger cable or a superconductor (MV+, but ULV and LV have their own lossless cables). You can use laser hatches much later to send even more. There even are wireless options, but not right now.\n\nA single block machine starved of EU will restart progress but not lose the recipe items. A multiblock machine will lose the items.\n\nNote that any block that emits EU has loss when doing so: 2 ^ (tier-1) per amp. So 1 EU at LV, 2 EU at MV, and so on. Using large numbers of battery buffers in a row is thus very wasteful of your power. You have to be careful with losses when making your first EBF later in LV, maybe rather power them directly? Of course, if you want to keep your amps topped up over longer distances, you'll need to place BBs occasionally to 'top up' the amps, though this is less the case the further ingame you get, as the loss becomes less of something to worry about.\n\nIf this info isn't enough for you, head on over to [url]https://wiki.gtnewhorizons.com/wiki/Electricity[/url] to read more.\n\nIf you prefer to learn via video there are also great YouTube resources such as HamCorp's Electricity Guide: [url]https://www.youtube.com/watch?v=lpDPY8J-4QY[/url]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lSafety First",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    70
  ],
  "rewards": [],
  "tasks": []
}
