tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__SendingthePowerB-AAAAAAAAAAAAAAAAAAAEeQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1145,
  "prerequisites": [
    1140
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Kinetic generator compatibility has been improved so that you no longer need transformers, you can connect directly with a cable. But why not use your transformer to send the power back to base more efficiently, it's a loss of about 97EU per HV amp just going from 160 straight down to 63 without it. If you transform up (after going through 1 block of cable to transform it to GT power), you only lose about 97EU per EV amp, which saves 4x the energy in regard to cable loss.\n\n[warn]IC2 machines don't care about rain, but remember to cover your transformer.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lSending the Power Back",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1140
  ],
  "rewards": [],
  "tasks": []
}
