tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__ShakeThatBooty-AAAAAAAAAAAAAAAAAAAFjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1420,
  "optional_prerequisites": [
    1521,
    8148220388809046234
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "...out of the purified ores. Anyways, a Large Sifter will increase your sifting speed significantly. What will you do with all these gems??\n\n[note]You need one more casing if you don't want to use 2 energy hatches.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lShake That Booty...",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
