tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__ShieldUpdate-AAAAAAAAAAAAAAAAAAABwA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 448,
  "prerequisites": [
    446
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your wooden shield is very weak. So you should make a better one. Looks like you need some leather, so go and find some cows.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lShield Update",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    446
  ],
  "rewards": [],
  "tasks": []
}
